--- a/src/scss/social-link.scss
+++ b/src/scss/social-link.scss
@@ -1,11 +1,11 @@
 /* social links */
 .social-links {
-  padding:0;
+  padding: 0;
   margin-top: 1.3rem;
-  width: 12rem;
+  width: 10rem;
   display: flex;
   justify-content: space-between;
-  align-item : center;
+  align-items: center;
 }
 .social-link {
   font-size: 1.5rem;
